Changed build-related stuff.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,24 @@
-name: Build/release
+name: Build and Release
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  release:
+
+  get_version:
+    runs-on: ubuntu-latest
+
+    outputs:
+      version: ${{ steps.set_version.outputs.version }}
+
+    steps:
+      - id: set_version
+        run: echo ::set-output name=version::$(node -pe "require('./package.json').version")
+
+
+  build:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -11,21 +26,24 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 20
+          node-version: '20'
 
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build app
+        run: npm run build
+
+      - name: Release app
+        uses: softprops/action-gh-release@v1
         with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.build_token }}
-
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          files: dist/*
+          token: ${{ secrets.build_token }}
+          tag_name: v${{ steps.get_version.outputs.version }}
+          body: Automated release
