--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "deadforge",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder build"
   },
   "keywords": [],
   "author": "DeadCodeGames",
@@ -13,5 +14,21 @@
   "devDependencies": {
     "electron": "^29.0.1",
     "electron-builder": "^24.12.0"
-  }
+  },
+  "build": {
+    "appId": "dev.deadcode.forge",
+    "productName": "DeadForge",
+    "win": {
+        "target": "nsis",
+        "artifactName": "dev.deadcode.forge-${version}.${ext}"
+    },
+    "mac": {
+      "target": "dmg",
+      "artifactName": "dev.deadcode.forge-${version}.${ext}"
+    },
+    "linux": {
+      "target": "deb",
+      "artifactName": "dev.deadcode.forge-${version}.${ext}"
+    }
+}
 }
