--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder build"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "DeadCodeGames",
@@ -14,21 +13,5 @@
   "devDependencies": {
     "electron": "^29.0.1",
     "electron-builder": "^24.12.0"
-  },
-  "build": {
-    "appId": "dev.deadcode.forge",
-    "productName": "DeadForge",
-    "win": {
-        "target": "nsis",
-        "artifactName": "dev.deadcode.forge-${version}.${ext}"
-    },
-    "mac": {
-      "target": "dmg",
-      "artifactName": "dev.deadcode.forge-${version}.${ext}"
-    },
-    "linux": {
-      "target": "deb",
-      "artifactName": "dev.deadcode.forge-${version}.${ext}"
-    }
-}
+  }
 }
