Fixed missing control buttons on Linux and possibly Mac
note: I did not have access to Mac to test this, but I figured I would just replace the window controls anyways.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v0.0.0",
+  "version": "v0.0.0Fix",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
@@ -29,5 +29,8 @@
       "target": "deb",
       "artifactName": "dev.deadcode.forge-${version}.${ext}"
     }
+  },
+  "dependencies": {
+    "@electron/remote": "^2.1.2"
   }
 }
