--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v0.0.0-RPC",
+  "version": "v0.0.0-AUTO",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "DeadCodeGames <404@mail.deadcode.is-a.dev> (https://deadcode.is-a.dev)",
   "license": "BSD-3-Clause",
-  "repository": "github:DeadCodeGames/DeadForge-Launcher",
+  "repository": "github:DeadCodeGames/DeadForge",
   "devDependencies": {
     "electron": "^29.0.1",
     "electron-builder": "^24.12.0"
@@ -32,6 +32,9 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
-    "discord-rpc": "^4.0.1"
+    "axios": "^1.6.7",
+    "child_process": "^1.0.2",
+    "discord-rpc": "^4.0.1",
+    "node-fetch": "^3.3.2"
   }
 }
