--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v0.0.0-OPTS",
+  "version": "v1.0.0ReleaseCandidateA",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "axios": "^1.6.7",
     "child_process": "^1.0.2",
     "discord-rpc": "^4.0.1",
+    "downloads-folder": "^3.0.3",
     "node-fetch": "^3.3.2"
   }
 }
