--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v0.0.0-OPTS",
+  "version": "v1.0.0",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "keywords": [],
   "author": "DeadCodeGames <404@mail.deadcode.is-a.dev> (https://deadcode.is-a.dev)",
+  "contributors": ["Richard Kanshen <kanshen@mail.deadcode.is-a.dev> (https://kanshen.click)", "QlexcTheFox <80660200+musiconstereo@users.noreply.github.com> (https://github.com/MusicOnStereo)"],
   "license": "BSD-3-Clause",
   "repository": "github:DeadCodeGames/DeadForge",
   "devDependencies": {
@@ -38,6 +39,7 @@
     "axios": "^1.6.7",
     "child_process": "^1.0.2",
     "discord-rpc": "^4.0.1",
+    "downloads-folder": "^3.0.3",
     "node-fetch": "^3.3.2"
   }
 }
