--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v1.0.0ReleaseCandidateE",
+  "version": "v1.0.0ReleaseCandidateF",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
