Multiple Bug Fixes
- Fixed multiple open windows at the same time
- Fixed auto-update opening multiple dialogs for the same update
- - Will have to change the update dialog to use custom modal windows instead of a by-passable native dialog

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v1.2.0Beta",
+  "version": "v1.2.0Gamma",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
