--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deadforge",
-  "version": "v1.4.0Alpha",
+  "version": "v1.4.0",
   "description": "An Electron Launcher for DeadCode Projects.",
   "main": "main.js",
   "scripts": {
@@ -35,6 +35,7 @@
     }
   },
   "dependencies": {
+    "@dead404code/lightbulbcss": "^1.0.0-Stable",
     "@electron/remote": "^2.1.2",
     "axios": "^1.6.7",
     "child_process": "^1.0.2",
